--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!--Header-->
     <header class="header">
+        <div class="container header">
      <nav class="header-nav">
        <a href="./index.html" class="header-logo link">Web<span class="header-accent">Studio</span></a>
         <ul class="header-list list">
@@ -28,19 +29,24 @@
         <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
         <li> <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
      </ul>
-
+</div>
     </header>
 
     <main>
 
     <!--Section-Hero-->
     <section class="hero">
+        <div class="container">
+            <div class="hero-box">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        </div>
         <button type="button" class="hero-btn">Замовити послугу</button>
+    </div>
     </section>
 
  <!--Section-About-->
         <section class="about">
+            <div class="container about">
             <h2 class="visually-hidden about-name">Список</h2>
            <ul class="about-list list">
             <li>
@@ -60,20 +66,24 @@
                 <p class="about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
            </ul>
+           </div>
         </section>
 
 <!--Section-works-->
         <section class="work">
+            <div class="container work">
     <h2 class="work-title title">Чим ми займаємося</h2>
     <ul class="work-list list">
         <li class="work-item"><img src="./img/img1.jpg" alt="Фото 1" width="370"></li>
         <li class="work-item"><img src="./img/img2.jpg" alt="Фото 2" width="370"></li>
         <li class="work-item"><img src="./img/img3.jpg" alt="Фото 3" width="370"></li>
     </ul>
+    </div>
 </section>
 
 <!--Section-Command-->
 <section class="command">
+    <div class="container command">
     <h2 class="command-title title">Наша команда</h2>
     <ul class="command-list list">
         <li>
@@ -97,11 +107,14 @@
                  <p class="command-position">UI Designer</p>
         </li>
     </ul>
+    </div>
 </section>
     </main>
 
     <!---Footer-->
     <footer>
+        <section class="footer">
+        <div class="container">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
        <address class="contacts">
@@ -111,6 +124,8 @@
             <li><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
         </ul>
        </address>
+       </div>
+       </section>
     </footer>
 </body>
 
