--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,12 @@
      <!--Header-->
 
  <header class="header">
+        <div class="container header">
      <nav class="header-nav">
-       <a href="" class="header-logo link">Web<span class="header-accent">Studio</span></a>
+       <a href="./index.html" class="header-logo link">Web<span class="header-accent">Studio</span></a>
         <ul class="header-list list">
-            <li><a href="./index.html" class="header-link link">Студія</a></li>
-            <li><a href="./portfolio.html" class="header-link current link">Портфоліо</a></li>
+            <li><a href="./index.html" class="header-link current link">Студія</a></li>
+            <li><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
             <li><a href="./contacts.html" class="header-link link">Контакти</a></li>
         </ul>
      </nav>
@@ -28,12 +29,13 @@
         <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
         <li> <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
      </ul>
-
+</div>
     </header>
 
     <main>
     <!--ABOUT-->
         <section class="navidation">
+            <div class="container nav">
 <h1 class="visually-hidden navidation">Фильтр кнопок</h1>
     <ul class="navidation-list list">
        <li><button type="button" class="navidation-btn">Усі</button></li>
@@ -42,9 +44,9 @@
        <li><button type="button" class="navidation-btn">Дизайн</button></li>
        <li><button type="button" class="navidation-btn">Маркетинг</button></li>
     </ul>
-
+</div>
 <!--Portfolio Works-->
-
+<div class="container">
 <ul class="portfolio-list list">
     <li class="portfolio-item">
         <img  src="./img/portfolio1.jpg" alt="Технокряк" width="370">
@@ -92,11 +94,14 @@
         <p class="portfolio-name">Додаток</p>
     </li>
 </ul>
+</div>
         </section>
  </main>
 
  <!--Footer-->
     <footer>
+        <section class="footer">
+        <div class="container">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
        <address class="contacts">
@@ -106,6 +111,8 @@
             <li><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
         </ul>
        </address>
+       </div>
+       </section>
     </footer>
  </body>
 </html>
