--- a/contacts.html
+++ b/contacts.html
@@ -13,34 +13,40 @@
 </head>
 
 <body class="body">
+    <!--Header-->
     <header class="header">
+        <div class="container header">
      <nav class="header-nav">
-       <a href="index.html" class="header-logo link">WebStudio</a>
-        <ul class="header-list">
-            <li><a href="./index.html" class="header-list link">Студія</a></li>
-            <li><a href="./portfolio.html" class="header-list link">Портфоліо</a></li>
-            <li><a href="./contacts.html" class="header-list link">Контакти</a></li> 
+       <a href="./index.html" class="header-logo link">Web<span class="header-accent">Studio</span></a>
+        <ul class="header-list list">
+            <li><a href="./index.html" class="header-link current link">Студія</a></li>
+            <li><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
+            <li><a href="./contacts.html" class="header-link link">Контакти</a></li>
         </ul>
      </nav>
-     <ul class="contacts-list">
-        <li><a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a></li>
-        <li> <a href="tel:+380961111111" class="phone link">+38 096 111 11 11</a></li>
+     <ul class="header-contacts list">
+        <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
+        <li> <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
      </ul>
-
+</div>
     </header>
 
 
  <!-- Footer-->
-    <footer>
-       <a href="index.html" class="header-logo link">WebStudio</a> 
-       <address>
-        <ul>
-            <li><a href="https://goo.gl/maps/kqypcUHR1DSrL7YE8" rel="noopener nofollow noreferrer" class="address link list">
-                м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="phone link">+38 096 111 11 11</a></li>
+   <footer>
+        <section class="footer">
+        <div class="container">
+       <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
+    </a>
+       <address class="contacts">
+        <ul class="contacts-list list">
+            <li><a href="https://goo.gl/maps/kqypcUHR1DSrL7YE8" rel="noopener nofollow noreferrer" class="contacts-address link list">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com" class="contacts-email link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
         </ul>
        </address>
+       </div>
+       </section>
     </footer>
 </body>
 
