--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     <main>
     <!--ABOUT-->
         <section class="navidation">
-            <div class="container nav">
+            <div class="container">
 <h1 class="visually-hidden navidation">Фильтр кнопок</h1>
     <ul class="navidation-list list">
        <li><button type="button" class="navidation-btn">Усі</button></li>
