--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 
     <!--Header-->
     <header class="header">
-        <div class="container header">
+        <div class="container-header container">
      <nav class="header-nav">
        <a href="./index.html" class="header-logo link">Web<span class="header-accent">Studio</span></a>
         <ul class="header-list list">
-            <li><a href="./index.html" class="header-link current link">Студія</a></li>
-            <li><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
-            <li><a href="./contacts.html" class="header-link link">Контакти</a></li>
+            <li class="item"><a href="./index.html" class="header-link current link">Студія</a></li>
+            <li class="item"><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
+            <li class="item"><a href="./contacts.html" class="header-link link">Контакти</a></li>
         </ul>
      </nav>
      <ul class="header-contacts list">
-        <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
-        <li> <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
+        <li class="item"><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
+        <li class="item"> <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
      </ul>
 </div>
     </header>
