--- a/portfolio.html
+++ b/portfolio.html
@@ -15,19 +15,20 @@
 
      <!--Header-->
 
- <header class="header">
-        <div class="container header">
+ <!--Header-->
+    <header class="header">
+        <div class="container-header container">
      <nav class="header-nav">
        <a href="./index.html" class="header-logo link">Web<span class="header-accent">Studio</span></a>
         <ul class="header-list list">
-            <li><a href="./index.html" class="header-link current link">Студія</a></li>
-            <li><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
-            <li><a href="./contacts.html" class="header-link link">Контакти</a></li>
+            <li class="item"><a href="./index.html" class="header-link current link">Студія</a></li>
+            <li class="item"><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
+            <li class="item"><a href="./contacts.html" class="header-link link">Контакти</a></li>
         </ul>
      </nav>
      <ul class="header-contacts list">
-        <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
-        <li> <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
+        <li class="item"><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
+        <li class="item"> <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
      </ul>
 </div>
     </header>
@@ -35,18 +36,18 @@
     <main>
     <!--ABOUT-->
         <section class="navidation">
-            <div class="container">
+            <div class="container-about container">
 <h1 class="visually-hidden navidation">Фильтр кнопок</h1>
     <ul class="navidation-list list">
-       <li><button type="button" class="navidation-btn">Усі</button></li>
-        <li><button type="button" class="navidation-btn">Веб-сайти</button></li>
-        <li><button type="button" class="navidation-btn">Додатки</button></li>
-       <li><button type="button" class="navidation-btn">Дизайн</button></li>
-       <li><button type="button" class="navidation-btn">Маркетинг</button></li>
+       <li class="navidation-item"><button type="button" class="navidation-btn">Усі</button></li>
+        <li class="navidation-item"><button type="button" class="navidation-btn">Веб-сайти</button></li>
+        <li class="navidation-item"><button type="button" class="navidation-btn">Додатки</button></li>
+       <li class="navidation-item"><button type="button" class="navidation-btn">Дизайн</button></li>
+       <li class="navidation-item"><button type="button" class="navidation-btn">Маркетинг</button></li>
     </ul>
 </div>
 <!--Portfolio Works-->
-<div class="container">
+<div class="container-portfolio container">
 <ul class="portfolio-list list">
     <li class="portfolio-item">
         <img  src="./img/portfolio1.jpg" alt="Технокряк" width="370">
