--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
 
     <!--Section-Hero-->
-    <section class="hero">
+    <section class="section hero-section">
             <div class="hero-box">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         </div>
@@ -43,23 +43,23 @@
     </section>
 
  <!--Section-About-->
-        <section class="about">
+        <section class="section">
             <div class="container about">
             <h2 class="visually-hidden about-name">Список</h2>
            <ul class="about-list list">
-            <li>
+            <li class="about-item">
                 <h3 class="about-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                   <p class="about-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li>
+            <li class="about-item">
                 <h3 class="about-title">ПУНКТУАЛЬНІСТЬ</h3>
                 <p class="about-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li>
+            <li class="about-item">
                 <h3 class="about-title">ПЛАНУВАННЯ</h3>
                 <p class="about-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li>
+            <li class="about-item">
                 <h3 class="about-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p class="about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
@@ -68,7 +68,7 @@
         </section>
 
 <!--Section-works-->
-        <section class="work">
+        <section class="section work-section no-padding">
             <div class="container work">
     <h2 class="work-title title">Чим ми займаємося</h2>
     <ul class="work-list list">
@@ -80,29 +80,37 @@
 </section>
 
 <!--Section-Command-->
-<section class="command">
+<section class="section command-section">
     <div class="container command">
     <h2 class="command-title title">Наша команда</h2>
     <ul class="command-list list">
-        <li>
+        <li class="command-item">
             <img src="./img/img_4.jpg" alt="Ігор Дем'яненко" width="270">
+            <div class="command-wrap">
               <h3 class="command-name">Ігор Дем'яненко</h3>
                 <p class="command-position">Product Designer</p>
+                </div>
         </li>
-        <li>
+        <li class="command-item">
             <img src="./img/img_5.jpg" alt="Ольга Рєпіна" width="270">
+            <div class="commnad-wrap">
               <h3 class="command-name">Ольга Рєпіна</h3>
                 <p class="command-position">Frontend Developer</p>
+                </div>
         </li>
-        <li>
+        <li class="command-item">
             <img src="./img/img_6.jpg" alt="Микола Тарасов" width="270">
+             <div class="commnad-wrap">
                <h3 class="command-name">Микола Тарасов</h3>
                  <p class="command-position">Marketing</p>
+                 </div>
         </li>
-        <li>
+        <li class="command-item">
             <img src="./img/img_7.jpg" alt="Михайло Єрмаков" width="270">
+             <div class="commnad-wrap">
                <h3 class="command-name">Михайло Єрмаков</h3>
                  <p class="command-position">UI Designer</p>
+                </div>
         </li>
     </ul>
     </div>
@@ -111,7 +119,7 @@
 
     <!---Footer-->
     <footer>
-        <section class="footer">
+        <section class="section">
         <div class="container">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
