--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
      <nav class="header-nav">
        <a href="./index.html" class="header-logo link">Web<span class="header-accent">Studio</span></a>
         <ul class="header-list list">
-            <li class="item"><a href="./index.html" class="header-link current link">Студія</a></li>
-            <li class="item"><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
+            <li class="item"><a href="./index.html" class="header-link link">Студія</a></li>
+            <li class="item"><a href="./portfolio.html" class="header-link current link">Портфоліо</a></li>
             <li class="item"><a href="./contacts.html" class="header-link link">Контакти</a></li>
         </ul>
      </nav>
@@ -35,7 +35,7 @@
 
     <main>
     <!--ABOUT-->
-        <section class="navidation">
+        <section class="section navidation">
             <div class="container-about container">
 <h1 class="visually-hidden navidation">Фильтр кнопок</h1>
     <ul class="navidation-list list">
@@ -51,48 +51,66 @@
 <ul class="portfolio-list list">
     <li class="portfolio-item">
         <img  src="./img/portfolio1.jpg" alt="Технокряк" width="370">
-        <h2 class="portfolio-title">Технокряк</h2>
+        <div class="portfol-wrap">
+                <h2 class="portfolio-title">Технокряк</h2>
         <p class="portfolio-name">Веб-сайт</p>
+        </div>
     </li>
     <li class="portfolio-item">
         <img src="./img/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+        <div class="portfol-wrap">
         <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
         <p class="portfolio-name">Дизайн</p>
+        </div>
     </li>
     <li class="portfolio-item">
         <img src="./img/portfolio3.jpg" alt="Ресторан Seafood" width="370">
+        <div class="portfol-wrap">
         <h2 class="portfolio-title">Ресторан Seafood</h2>
         <p class="portfolio-name">Додаток</p>
+        </div>
     </li>
     <li class="portfolio-item">
         <img src="./img/portfolio4.jpg" alt="Проєкт Prime" width="370">
-        <h2 class="portfolio-title">Проєкт Prime</h2>
+        <div class="portfol-wrap">
+               <h2 class="portfolio-title">Проєкт Prime</h2>
         <p class="portfolio-name">Маркетинг</p>
+        </div>
     </li>
     <li class="portfolio-item">
         <img src="./img/portfolio5.jpg" alt="Проєкт Boxes" width="370">
+        <div class="portfol-wrap">
         <h2 class="portfolio-title">Проєкт Boxes</h2>
         <p class="portfolio-name">Додаток</p>
+        </div>
     </li>
     <li class="portfolio-item">
         <img src="./img/portfolio6.jpg" alt="Inspiration has no Borders" width="370">
+        <div class="portfol-wrap">
         <h2 class="portfolio-title">Inspiration has no Borders</h2>
         <p class="portfolio-name">Веб-сайт</p>
+        </div>
     </li>
     <li class="portfolio-item">
         <img src="./img/portfolio7.jpg" alt="Видання Limited Edition" width="370">
+        <div class="portfol-wrap">
         <h2 class="portfolio-title">Видання Limited Edition</h2>
         <p class="portfolio-name">Дизайн</p>
+    </div>
     </li>
     <li class="portfolio-item">
         <img src="./img/portfolio8.jpg" alt="Проєкт LAB" width="370">
+        <div class="portfol-wrap">
         <h2 class="portfolio-title">Проєкт LAB</h2>
         <p class="portfolio-name">Маркетинг</p>
+    </div>
     </li>
     <li class="portfolio-item">
         <img src="./img/portfolio9.jpg" alt="Growing Business" width="370">
+        <div class="portfol-wrap">
         <h2 class="portfolio-title">Growing Business</h2>
         <p class="portfolio-name">Додаток</p>
+    </div>
     </li>
 </ul>
 </div>
