navigation deleted, command edited

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <!---Footer-->
     <footer>
-        <section class="section">
+        <section class="section footer">
         <div class="container">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
