--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 
     <main>
     <!--ABOUT-->
-        <section class="section navidation">
+        <section class="section">
             <div class="container-about container">
 <h1 class="visually-hidden navidation">Фильтр кнопок</h1>
     <ul class="navidation-list list">
@@ -119,7 +119,7 @@
 
  <!--Footer-->
     <footer>
-        <section class="footer">
+        <section class="section footer">
         <div class="container">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
