made all changes

--- a/contacts.html
+++ b/contacts.html
@@ -37,19 +37,17 @@
 
  <!-- Footer-->
    <footer>
-        <section class="section footer">
         <div class="container">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
        <address class="contacts">
         <ul class="contacts-list list">
-            <li><a href="https://goo.gl/maps/kqypcUHR1DSrL7YE8" rel="noopener nofollow noreferrer" class="contacts-address link list">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="contacts-email link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
+            <li class="contacts-item"><a href="https://goo.gl/maps/kqypcUHR1DSrL7YE8" rel="noopener nofollow noreferrer" class="contacts-address link list">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-email link">info@devstudio.com</a></li>
+            <li class="contacts-item"><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
         </ul>
        </address>
        </div>
-       </section>
     </footer>
 </body>
 
