--- a/index.html
+++ b/index.html
@@ -85,29 +85,29 @@
     <h2 class="command-title title">Наша команда</h2>
     <ul class="command-list list">
         <li class="command-item">
-            <img src="./img/img_4.jpg" alt="Ігор Дем'яненко" width="270">
+            <img class="command-img" src="./img/img_4.jpg" alt="Ігор Дем'яненко" width="270">
             <div class="command-wrap">
               <h3 class="command-name">Ігор Дем'яненко</h3>
                 <p class="command-position">Product Designer</p>
                 </div>
         </li>
         <li class="command-item">
-            <img src="./img/img_5.jpg" alt="Ольга Рєпіна" width="270">
-            <div class="commnad-wrap">
+            <img class="command-img" src="./img/img_5.jpg" alt="Ольга Рєпіна" width="270">
+            <div class="command-wrap">
               <h3 class="command-name">Ольга Рєпіна</h3>
                 <p class="command-position">Frontend Developer</p>
                 </div>
         </li>
         <li class="command-item">
-            <img src="./img/img_6.jpg" alt="Микола Тарасов" width="270">
-             <div class="commnad-wrap">
+            <img class="command-img" src="./img/img_6.jpg" alt="Микола Тарасов" width="270">
+             <div class="command-wrap">
                <h3 class="command-name">Микола Тарасов</h3>
                  <p class="command-position">Marketing</p>
                  </div>
         </li>
         <li class="command-item">
-            <img src="./img/img_7.jpg" alt="Михайло Єрмаков" width="270">
-             <div class="commnad-wrap">
+            <img class="command-img" src="./img/img_7.jpg" alt="Михайло Єрмаков" width="270">
+             <div class="command-wrap">
                <h3 class="command-name">Михайло Єрмаков</h3>
                  <p class="command-position">UI Designer</p>
                 </div>
@@ -119,19 +119,17 @@
 
     <!---Footer-->
     <footer>
-        <section class="section footer">
         <div class="container">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
        <address class="contacts">
         <ul class="contacts-list list">
-            <li><a href="https://goo.gl/maps/kqypcUHR1DSrL7YE8" rel="noopener nofollow noreferrer" class="contacts-address link list">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="contacts-email link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
+            <li class="contacts-item"><a href="https://goo.gl/maps/kqypcUHR1DSrL7YE8" rel="noopener nofollow noreferrer" class="contacts-address link list">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-email link">info@devstudio.com</a></li>
+            <li class="contacts-item"><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
         </ul>
        </address>
        </div>
-       </section>
     </footer>
 </body>
 
