--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     <main>
     <!--ABOUT-->
         <section class="section">
-            <div class="container-about container">
+            <div class="container-portfolio container">
 <h1 class="visually-hidden navidation">Фильтр кнопок</h1>
     <ul class="navidation-list list">
        <li class="navidation-item"><button type="button" class="navidation-btn">Усі</button></li>
@@ -45,9 +45,8 @@
        <li class="navidation-item"><button type="button" class="navidation-btn">Дизайн</button></li>
        <li class="navidation-item"><button type="button" class="navidation-btn">Маркетинг</button></li>
     </ul>
-</div>
 <!--Portfolio Works-->
-<div class="container-portfolio container">
+<div class="portfolio-cards">
 <ul class="portfolio-list list">
     <li class="portfolio-item">
         <img  src="./img/portfolio1.jpg" alt="Технокряк" width="370">
@@ -114,24 +113,23 @@
     </li>
 </ul>
 </div>
+</div>
         </section>
  </main>
 
  <!--Footer-->
-    <footer>
-        <section class="section footer">
+     <footer>
         <div class="container">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
        <address class="contacts">
         <ul class="contacts-list list">
-            <li><a href="https://goo.gl/maps/kqypcUHR1DSrL7YE8" rel="noopener nofollow noreferrer" class="contacts-address link list">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="contacts-email link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
+            <li class="contacts-item"><a href="https://goo.gl/maps/kqypcUHR1DSrL7YE8" rel="noopener nofollow noreferrer" class="contacts-address link list">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-email link">info@devstudio.com</a></li>
+            <li class="contacts-item"><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
         </ul>
        </address>
        </div>
-       </section>
     </footer>
  </body>
 </html>
