added icons to command

--- a/index.html
+++ b/index.html
@@ -90,6 +90,32 @@
               <h3 class="command-name">Ігор Дем'яненко</h3>
                 <p class="command-position">Product Designer</p>
                 </div>
+                   <ul class="command-soc-list list">
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                        <svg width="20" height="20" class="command-soc-icons">
+                        <use href="./img/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                      <svg width="20" height="20" class="command-soc-icons">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                <svg width="20" height="20" class="command-soc-icons">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                        <svg width="20" height="20" class="command-soc-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+                </ul>
         </li>
         <li class="command-item">
             <img class="command-img" src="./img/img_5.jpg" alt="Ольга Рєпіна" width="270">
@@ -97,6 +123,32 @@
               <h3 class="command-name">Ольга Рєпіна</h3>
                 <p class="command-position">Frontend Developer</p>
                 </div>
+                <ul class="command-soc-list list">
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                        <svg width="20" height="20" class="command-soc-icons">
+                        <use href="./img/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                      <svg width="20" height="20" class="command-soc-icons">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                <svg width="20" height="20" class="command-soc-icons">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                        <svg width="20" height="20" class="command-soc-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+                </ul>
         </li>
         <li class="command-item">
             <img class="command-img" src="./img/img_6.jpg" alt="Микола Тарасов" width="270">
@@ -104,6 +156,32 @@
                <h3 class="command-name">Микола Тарасов</h3>
                  <p class="command-position">Marketing</p>
                  </div>
+                    <ul class="command-soc-list list">
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                        <svg width="20" height="20" class="command-soc-icons">
+                        <use href="./img/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                      <svg width="20" height="20" class="command-soc-icons">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                <svg width="20" height="20" class="command-soc-icons">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                        <svg width="20" height="20" class="command-soc-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+                </ul>
         </li>
         <li class="command-item">
             <img class="command-img" src="./img/img_7.jpg" alt="Михайло Єрмаков" width="270">
@@ -111,6 +189,32 @@
                <h3 class="command-name">Михайло Єрмаков</h3>
                  <p class="command-position">UI Designer</p>
                 </div>
+                   <ul class="command-soc-list list">
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                        <svg width="20" height="20" class="command-soc-icons">
+                        <use href="./img/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                      <svg width="20" height="20" class="command-soc-icons">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                <svg width="20" height="20" class="command-soc-icons">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="command-soc-item"><a href="#" class="command-soc-link link">
+                        <svg width="20" height="20" class="command-soc-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+                </ul>
         </li>
     </ul>
     </div>
