--- a/index.html
+++ b/index.html
@@ -219,6 +219,49 @@
     </ul>
     </div>
 </section>
+
+<!--Clients-->
+<section>
+<h2 class="clients-title title">Постійні клієнти</h2> 
+<ul>
+    <li class="client-item"><a href="#" class="client-link link">
+        <svg width="106" height="60" class="client-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+    </a>
+    </li>
+    <li class="client-item"><a href="#" class="client-link link">
+        <svg width="106" height="60" class="client-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+    </a>
+    </li>
+    <li class="client-item"><a href="#" class="client-link link">
+        <svg width="106" height="60" class="client-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+    </a>
+    </li>
+    <li class="client-item"><a href="#" class="client-link link">
+        <svg width="106" height="60" class="client-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+    </a>
+    </li>
+    <li class="client-item"><a href="#" class="client-link link">
+        <svg width="106" height="60" class="client-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+    </a>
+    </li>
+    <li class="client-item"><a href="#" class="client-link link">
+        <svg width="106" height="60" class="client-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+    </a>
+    </li>
+</ul>
+</section>
     </main>
 
     <!---Footer-->
@@ -233,6 +276,35 @@
             <li class="contacts-item"><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
         </ul>
        </address>
+       </div>
+       <div>
+        <h3 class="footer-soc-text">приєднуйтесь</h3>
+                 <ul class="footer-soc-list list">
+                    <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
+                        <svg width="20" height="20" class="footer-soc-icons">
+                        <use href="./img/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
+                      <svg width="20" height="20" class="footer-soc-icons">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
+                <svg width="20" height="20" class="footer-soc-icons">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
+                        <svg width="20" height="20" class="footer-soc-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+                </ul>
        </div>
     </footer>
 </body>
