--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
         </ul>
      </nav>
      <ul class="header-contacts list">
-        <li class="item"><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
-        <li class="item"> <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
+        <li class="email-item item">
+            <a href="mailto:info@devstudio.com" class="header-email link">
+ <svg class="header-icon" width="16" height="12">
+    <use href="./img/icons.svg#icon-envelope"></use>
+ </svg> info@devstudio.com</a></li>
+        <li class="tel-item item"> <a href="tel:+380961111111" class="header-tel link">
+            <svg class="header-icon" width="10" height="16">
+    <use href="./img/icons.svg#icon-telephone"></use>
+ </svg>+38 096 111 11 11</a></li>
      </ul>
 </div>
     </header>
@@ -48,18 +55,34 @@
             <h2 class="visually-hidden about-name">Список</h2>
            <ul class="about-list list">
             <li class="about-item">
+                <div class="about-icon"><svg class="antena-icon">
+                    <use href="./img/icons.svg#icon-antenna"></use>
+                </svg>
+                </div>
                 <h3 class="about-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                   <p class="about-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li class="about-item">
+                  <div class="about-icon"><svg class="clock-icon">
+                    <use href="./img/icons.svg#icon-clock"></use>
+                </svg>
+                </div>
                 <h3 class="about-title">ПУНКТУАЛЬНІСТЬ</h3>
                 <p class="about-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li class="about-item">
+                  <div class="about-icon"><svg class="diagram-icon">
+                    <use href="./img/icons.svg#icon-diagram"></use>
+                </svg>
+                </div>
                 <h3 class="about-title">ПЛАНУВАННЯ</h3>
                 <p class="about-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="about-item">
+                  <div class="about-icon"><svg class="astronaut-icon">
+                    <use href="./img/icons.svg#icon-astronaut"></use>
+                </svg>
+                </div>
                 <h3 class="about-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p class="about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
@@ -79,7 +102,7 @@
     </div>
 </section>
 
-<!--Section-Command-->
+<!--Command-->
 <section class="section command-section">
     <div class="container command">
     <h2 class="command-title title">Наша команда</h2>
@@ -221,42 +244,42 @@
 </section>
 
 <!--Clients-->
-<section>
-<h2 class="clients-title title">Постійні клієнти</h2> 
-<ul>
+<section class="section">
+<h2 class="client-title title">Постійні клієнти</h2>
+<ul class="client-list list">
     <li class="client-item"><a href="#" class="client-link link">
         <svg width="106" height="60" class="client-icons">
-                <use href="./img/icons.svg#icon-linkedin"></use>
+                <use href="./img/icons.svg#icon-client1"></use>
                         </svg>
     </a>
     </li>
     <li class="client-item"><a href="#" class="client-link link">
         <svg width="106" height="60" class="client-icons">
-                <use href="./img/icons.svg#icon-linkedin"></use>
+                <use href="./img/icons.svg#icon-client2"></use>
                         </svg>
     </a>
     </li>
     <li class="client-item"><a href="#" class="client-link link">
         <svg width="106" height="60" class="client-icons">
-                <use href="./img/icons.svg#icon-linkedin"></use>
+                <use href="./img/icons.svg#icon-client3"></use>
                         </svg>
     </a>
     </li>
     <li class="client-item"><a href="#" class="client-link link">
         <svg width="106" height="60" class="client-icons">
-                <use href="./img/icons.svg#icon-linkedin"></use>
+                <use href="./img/icons.svg#icon-client4"></use>
                         </svg>
     </a>
     </li>
     <li class="client-item"><a href="#" class="client-link link">
         <svg width="106" height="60" class="client-icons">
-                <use href="./img/icons.svg#icon-linkedin"></use>
+                <use href="./img/icons.svg#icon-client5"></use>
                         </svg>
     </a>
     </li>
     <li class="client-item"><a href="#" class="client-link link">
         <svg width="106" height="60" class="client-icons">
-                <use href="./img/icons.svg#icon-linkedin"></use>
+                <use href="./img/icons.svg#icon-client6"></use>
                         </svg>
     </a>
     </li>
@@ -277,7 +300,7 @@
         </ul>
        </address>
        </div>
-       <div>
+       <div class="footer-icons">
         <h3 class="footer-soc-text">приєднуйтесь</h3>
                  <ul class="footer-soc-list list">
                     <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
