--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         </ul>
        </address>
        </div>
-       <div class="footer-icons">
+       <div class="container footer-icons">
         <h3 class="footer-soc-text">приєднуйтесь</h3>
                  <ul class="footer-soc-list list">
                     <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
