--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
 
     <!---Footer-->
     <footer>
-        <div class="container">
+        <div class="container footer-container">
+        <div class="container footer-adress">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
        <address class="contacts">
@@ -300,7 +301,7 @@
         </ul>
        </address>
        </div>
-       <div class="container footer-icons">
+       <div class="footer-icons">
         <h3 class="footer-soc-text">приєднуйтесь</h3>
                  <ul class="footer-soc-list list">
                     <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
@@ -328,6 +329,7 @@
                     </a>
                 </li>
                 </ul>
+       </div>
        </div>
     </footer>
 </body>
