--- a/contacts.html
+++ b/contacts.html
@@ -14,19 +14,26 @@
 
 <body class="body">
     <!--Header-->
-    <header class="header">
-        <div class="container-header container">
+     <header class="header">
+      <div class="container-header container">
      <nav class="header-nav">
        <a href="./index.html" class="header-logo link">Web<span class="header-accent">Studio</span></a>
         <ul class="header-list list">
-            <li class="item"><a href="./index.html" class="header-link link">Студія</a></li>
+            <li class="item"><a href="./index.html" class="header-link current link">Студія</a></li>
             <li class="item"><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
-            <li class="item"><a href="./contacts.html" class="header-link current link">Контакти</a></li>
+            <li class="item"><a href="./contacts.html" class="header-link link">Контакти</a></li>
         </ul>
      </nav>
      <ul class="header-contacts list">
-        <li class="item"><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
-        <li class="item"> <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
+        <li class="email-item item">
+            <a href="mailto:info@devstudio.com" class="header-email link">
+ <svg class="header-icon" width="16" height="12">
+    <use href="./img/icons.svg#icon-envelope"></use>
+ </svg> info@devstudio.com</a></li>
+        <li class="tel-item item"> <a href="tel:+380961111111" class="header-tel link">
+            <svg class="header-icon" width="10" height="16">
+    <use href="./img/icons.svg#icon-telephone"></use>
+ </svg>+38 096 111 11 11</a></li>
      </ul>
 </div>
     </header>
@@ -37,7 +44,8 @@
 
  <!-- Footer-->
    <footer>
-        <div class="container">
+        <div class="container footer-container">
+        <div class="container footer-adress">
        <a href="" class="footer-header-logo link">Web<span class="footet-header-accent">Studio</span>
     </a>
        <address class="contacts">
@@ -47,6 +55,36 @@
             <li class="contacts-item"><a href="tel:+380961111111" class="contacts-phone link">+38 096 111 11 11</a></li>
         </ul>
        </address>
+       </div>
+       <div class="footer-icons">
+        <h3 class="footer-soc-text">приєднуйтесь</h3>
+                 <ul class="footer-soc-list list">
+                    <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
+                        <svg width="20" height="20" class="footer-soc-icons">
+                        <use href="./img/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
+                      <svg width="20" height="20" class="footer-soc-icons">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
+                <svg width="20" height="20" class="footer-soc-icons">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                    <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
+                        <svg width="20" height="20" class="footer-soc-icons">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+                </ul>
+       </div>
        </div>
     </footer>
 </body>
