--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
 
 <!--Clients-->
 <section class="section">
+    <div class="container client">
 <h2 class="client-title title">Постійні клієнти</h2>
 <ul class="client-list list">
     <li class="client-item"><a href="#" class="client-link link">
@@ -284,6 +285,7 @@
     </a>
     </li>
 </ul>
+</div>
 </section>
     </main>
 
@@ -302,7 +304,7 @@
        </address>
        </div>
        <div class="footer-icons">
-        <h3 class="footer-soc-text">приєднуйтесь</h3>
+        <p class="footer-soc-text">приєднуйтесь</p>
                  <ul class="footer-soc-list list">
                     <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
                         <svg width="20" height="20" class="footer-soc-icons">
