--- a/contacts.html
+++ b/contacts.html
@@ -19,9 +19,9 @@
      <nav class="header-nav">
        <a href="./index.html" class="header-logo link">Web<span class="header-accent">Studio</span></a>
         <ul class="header-list list">
-            <li class="item"><a href="./index.html" class="header-link current link">Студія</a></li>
+            <li class="item"><a href="./index.html" class="header-link link">Студія</a></li>
             <li class="item"><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
-            <li class="item"><a href="./contacts.html" class="header-link link">Контакти</a></li>
+            <li class="item"><a href="./contacts.html" class="header-link current link">Контакти</a></li>
         </ul>
      </nav>
      <ul class="header-contacts list">
